nivasa-macros/tests/trybuild/validation_is_number_invalid.stderr
error: expected a numeric field for `#[is_number]`
 --> tests/trybuild/validation_is_number_invalid.rs:5:5
  |
5 |     #[is_number]
  |     ^
